fixed bg, changed spacing to p in header

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1 {
   font-size: 2.5rem;
   font-weight: 700;
   line-height: 0.85;
-  letter-spacing: -0.125rem;
+  letter-spacing: 0px;
   color: var(--purple-900);
   max-width: 29.125rem;
   padding-bottom: 16px;
@@ -186,10 +186,8 @@ article>p {
 
   .bg-pattern-bottom-desktop {
     display: block;
-    left: 0;
     right: 0;
     bottom: 0;
-    width: 100%;
   }
 
   .rating-container {
@@ -238,6 +236,7 @@ article>p {
     text-align: left;
     max-width: 25rem;
     margin-inline: 0;
+    padding-bottom: 24px;
   }
 
   header p {
